[package]
name = "numpy"
version = "0.2.1"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]

description = "Rust binding of NumPy C-API"
documentation = "https://docs.rs/numpy/"
repository = "https://github.com/termoshtt/rust-numpy"
keywords = ["numpy", "python", "binding"]
license-file = "LICENSE"

[dependencies]
libc = "0.2"
num-complex = "0.1"
ndarray = "0.10"

[dependencies.python27-sys]
optional = true
version = "0.1"

[dependencies.python3-sys]
optional = true
version = "0.1"

[dependencies.cpython]
version = "0.1"
default-features = false
features =  ["python27-sys"]

[features]
default = ["python27-sys"]
